# mRNA

./: .gitignore  CONTRIBUTING.md  LATEST_LOG.md  LICENSE  README.md  SECURITY.md  model_config.yaml  pyproject.toml  ruff.toml  start-mrna.sh
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: codeql-analysis.yml  python-tests.yml
docs/: CURRENT.md  DATASETS.md  gem-news.md  setup.md  synthesis-log.md
sandbox-scripts/: convert_adapters_to_gguf.py  dataset_boundary_analyzer.py  discover_concepts.py  eval_sae.py  harvest_hf.py  mrna_worker.py  prefill_router.py  train_mrna_adapter.py  train_sae.py
sandbox-scripts/archive/: bench_load.py  engram_host.py  sae_routing.py  socket_attention.py  socket_triton.py  temporal_lora.py  train_unsloth_packing.py  triton_matmul.py
src/mrna/: __init__.py  api.py  orchestrator.py  pipeline.py
src/mrna.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/mrna/analysis/: boundary.py  eval.py
src/mrna/core/: config.py
src/mrna/data/: dataset_utils.py  paths.py
src/mrna/execution/: __init__.py  adapter_convert.py  llama_cpp_node.py  streaming_lora.py
src/mrna/factory/: adapter.py  sae.py  sampler.py
src/mrna/router/: __init__.py  interceptor.py  miin_router.py  pooling.py  sae.py
src/mrna/substrate/: __init__.py  backend.py  lora_merge.py
tests/: conftest.py  test_config.py  test_factory.py  test_routing.py
