[project]
name = "mrna"
version = "0.1.0"
description = ".mrna: Neural routing and adapter infrastructure"
authors = [
    { name = "Dakota Veaux", email = "dakotaveaux@gmail.com" }
]
dependencies = [
    "torch",
    "transformers",
    "unsloth",
    "trl",
    "datasets",
    "pyyaml",
    "tqdm",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "requests",
]
requires-python = ">=3.12"

[project.scripts]
mrna-harvest = "mrna.factory.sampler:main"
mrna-train-adapter = "mrna.factory.adapter:main"
mrna-train-sae = "mrna.factory.sae:main"
mrna-bleed-check = "mrna.analysis.boundary:main"
mrna-eval = "mrna.analysis.eval:main"
mrna-auto-train = "mrna.orchestrator:main"
mrna-convert = "mrna.execution.adapter_convert:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
